[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
itertools = "0.13.0"
regex = "1.11.1"

[dev-dependencies]
test-case = "*"

[[bin]]
name = "day1"
path = "src/01/main.rs"

[[bin]]
name = "day2"
path = "src/02/main.rs"

[[bin]]
name = "day3"
path = "src/03/main.rs"

[[bin]]
name = "day4"
path = "src/04/main.rs"

[[bin]]
name = "day5"
path = "src/05/main.rs"

[[bin]]
name = "day6"
path = "src/06/main.rs"

[[bin]]
name = "day7"
path = "src/07/main.rs"

[[bin]]
name = "day8"
path = "src/08/main.rs"

[[bin]]
name = "day9"
path = "src/09/main.rs"

[[bin]]
name = "day10"
path = "src/10/main.rs"

[[bin]]
name = "day11"
path = "src/11/main.rs"

[[bin]]
name = "day12"
path = "src/12/main.rs"

[[bin]]
name = "day13"
path = "src/13/main.rs"

[[bin]]
name = "day14"
path = "src/14/main.rs"

[[bin]]
name = "day15"
path = "src/15/main.rs"

[[bin]]
name = "day16"
path = "src/16/main.rs"

[[bin]]
name = "2024-01"
path = "src/2024/01/main.rs"

[[bin]]
name = "2024-02"
path = "src/2024/02/main.rs"

[[bin]]
name = "2024-03"
path = "src/2024/03/main.rs"

[[bin]]
name = "2024-04"
path = "src/2024/04/main.rs"

[[bin]]
name = "2024-05"
path = "src/2024/05/main.rs"

[[bin]]
name = "2024-06"
path = "src/2024/06/main.rs"

[[bin]]
name = "2024-07"
path = "src/2024/07/main.rs"

[[bin]]
name = "2024-08"
path = "src/2024/08/main.rs"

[[bin]]
name = "2024-09"
path = "src/2024/09/main.rs"

[[bin]]
name = "2024-10"
path = "src/2024/10/main.rs"

[[bin]]
name = "2024-11"
path = "src/2024/11/main.rs"

[[bin]]
name = "2024-12"
path = "src/2024/12/main.rs"
